# me-672

./: Dockerfile  README.md  circle.ipynb  concentrated-force.ipynb  hw-2.ipynb  pyproject.toml  type_I.ipynb  type_II-elas.ipynb  type_II.ipynb
.devcontainer/: devcontainer.json
