[build-system]
requires = ["setuptools>=64.4.0", "wheel", "pip>=22.3"]
build-backend = "setuptools.build_meta"

[project]
name = "DOLFINx_Tutorial"
version = "0.7.2"
dependencies = ["jupyter-book==1.0.3",
# Pin docutils due to https://github.com/executablebooks/jupyter-book/issues/1970#issuecomment-1466051277
"docutils==0.17.1",
"meshio==5.3.5",
"h5py==3.12.1",
"seaborn==0.13.2",
"pandas==2.2.3",
"tqdm==4.66.5",
"pyvista[all]@git+https://github.com/pyvista/pyvista",
"fenics-dolfinx>=0.7.0",
"pygmsh==7.1.17",
]

[project.optional-dependencies]
dev = [
    "pdbpp",
    "ipython",
]

[tool.setuptools]
packages = []
